--- a/src/components/single.scss
+++ b/src/components/single.scss
@@ -28,6 +28,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding:1rem;
         gap:20px;
         .img-holder{
             flex:1;
@@ -53,4 +54,10 @@
             }
         }
     }
+    @media screen and (max-width:800px){
+        .holder{
+            flex-direction:column;
+        }
+    }
+    
 }
