--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,9 +28,10 @@ section{
   /* a section közepéhez igazítja a görgetést, tehát a görgetés során a section közepénél fog megállni, és nem hagyja azt félbehagyottan vagy részben láthatóan.*/
   scroll-snap-align: center;
 }
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   section {
     min-height: 50vh; /* Változtasd meg az értéket az igényeid szerint */
+    scroll-snap-align:start;
   }
 }
 a{
