--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,8 +1,6 @@
 @import "../variables.scss";
 .hero {
-  height: calc(100vh - 60px);
-  /*background: linear-gradient(180deg, $top-color, $primary-color);*/
-  width: 100%;
+  min-height: calc(100vh - 60px);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -10,9 +8,9 @@
 
   .img-container {
     height: 100%;
-
     display: flex;
     align-items: end;
+    position: relative; /* a back-text igazításáshoz*/
   }
   .holder {
     height: 100%;
@@ -25,7 +23,6 @@
     max-width: 500px;
 
     .text-container {
-      
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -39,12 +36,12 @@
         letter-spacing: 10px;
       }
     }
-    @media screen and (max-width:600px){
-      .holder{
-        gap:10px;
-        .text-container{
-          gap:10px;
-          h1{
+    @media screen and (max-width: 600px) {
+      .holder {
+        gap: 10px;
+        .text-container {
+          gap: 10px;
+          h1 {
             font-size: 1.5rem;
           }
         }
@@ -62,11 +59,11 @@
         cursor: pointer;
       }
     }
-    .scroll-button{
-        color:aliceblue;
-        background: transparent;
-        padding: 2px;
-       /* border:0.5px solid aliceblue;
+    .scroll-button {
+      color: aliceblue;
+      background: transparent;
+      padding: 2px;
+      /* border:0.5px solid aliceblue;
         border-radius: 5px;*/
     }
   }
@@ -77,10 +74,9 @@
     font-size: 15vw;
     color: $top-color;
   }
-  @media (max-width:600px){
-    .back-text{
-      bottom: -10px;
+  @media (max-width: 600px) {
+    .back-text {
+      bottom: -20vh;
     }
   }
-  
 }
